Adding statement selection buttons and initial javascript

--- a/webapp/templates/canvas.html
+++ b/webapp/templates/canvas.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="{{ url_for('static', filename='canvas.css') }}">
+<script type="text/javascript" src="{{ url_for('static', filename='canvas.js') }}"></script>
 </head>
 
 <body>
@@ -9,40 +10,45 @@
 <h1>INDRA Web interface</h1>
 </div>
 
+<div id="main_panels">
 <div id="input_panels">
 <div id="trips_panel" class="input_panel">
 <form action="" method="POST" name="trips_form">
 {{ trips_form.trips_input }}
 {{ trips_form.trips_process(class_="process_button") }}
 {{ trips_form.statements_list(class_="statements_list") }}
-{{ indra_form.trips_select}}
+<button type="button" id="trips_select">>></button>
 </form>
 </div>
+
 <div id="reach_panel" class="input_panel">
 <form action="" method="POST" name="reach_form">
 {{ reach_form.reach_input }}
 {{ reach_form.reach_process(class_="process_button") }}
 {{ reach_form.statements_list(class_="statements_list") }}
-{{ indra_form.reach_select}}
+<button type="button" id="reach_select">>></button>
 </form>
 </div>
+
 <div id="biopax_panel" class="input_panel">
 <form action="" method="POST" name="biopax_form">
 {{ biopax_form.biopax_input }}
 {{ biopax_form.biopax_process(class_="process_button") }}
 {{ biopax_form.statements_list(class_="statements_list") }}
-{{ indra_form.biopax_select}}
+<button type="button" id="biopax_select">>></button>
 </form>
 </div>
+
 <div id="bel_panel" class="input_panel">
 <form action="" method="POST" name="bel_form">
 {{ bel_form.bel_input }}
 {{ bel_form.bel_process(class_="process_button") }}
 {{ bel_form.statements_list(class_="statements_list") }}
-{{ indra_form.bel_select}}
+<button type="button" id="bel_select">>></button>
 </form>
 </div>
 </div>
+
 <div class="panel" id="indra_panel">
 <form action="" method="POST" name="indra_form">
 {{ indra_form.indra_list(class_="statements_list") }}
@@ -54,6 +60,7 @@
 {{ indra_form.network_assemble }}
 </form>
 </div>
+
 <div class="panel" id="model_panel">
 <textarea class="pysb_div">
 {%- if pysb_model %}
@@ -62,6 +69,7 @@
 Result goes here
 {%- endif %}
 </textarea>
+</div>
 </div>
 
 </body>
