--- a/webapp/static/canvas.css
+++ b/webapp/static/canvas.css
@@ -9,6 +9,12 @@ body {
     float: left;
     height: 800px;
     }
+#main_panels {
+    width: 1200px;
+    height: 1000px;
+    text-align:center;
+    float: center;
+    }
 .input_panel {
     height: 150px;
     width: 500px;
@@ -36,12 +42,12 @@ body {
 #indra_list {
     vertical-align: center;
     width: 300px;
-    height: 600px;
+    height: 585px;
     }
 #model_panel {
     float: left;
-    height: 150px;
-    width: 300px;
+    height: 630px;
+    width: 310px;
     padding: 5px;
     background-color:#eeeeee;
     }
@@ -59,5 +65,5 @@ body {
 .pysb_div {
     vertical-align: top;
     width: 300px;
-    height: 630px;
+    height: 585px;
     }
