End-to-end INDRA Statement propagation

--- a/webapp/static/canvas.css
+++ b/webapp/static/canvas.css
@@ -39,7 +39,7 @@ body {
     padding: 5px;
     background-color:#cccccc;
     }
-#indra_list {
+#indra_stmts {
     vertical-align: center;
     width: 300px;
     height: 585px;
