--- a/webapp/templates/canvas.html
+++ b/webapp/templates/canvas.html
@@ -16,8 +16,8 @@
 <form action="" method="POST" name="trips_form">
 {{ trips_form.trips_input }}
 {{ trips_form.trips_process(class_="process_button") }}
-{{ trips_form.statements_list(class_="statements_list") }}
-<button type="button" id="trips_select">>></button>
+{{ trips_form.trips_stmts(class_="statements_list") }}
+{{ trips_form.trips_select(class_="process_button") }}
 </form>
 </div>
 
@@ -25,7 +25,7 @@
 <form action="" method="POST" name="reach_form">
 {{ reach_form.reach_input }}
 {{ reach_form.reach_process(class_="process_button") }}
-{{ reach_form.statements_list(class_="statements_list") }}
+{{ reach_form.reach_stmts(class_="statements_list") }}
 <button type="button" id="reach_select">>></button>
 </form>
 </div>
@@ -34,7 +34,7 @@
 <form action="" method="POST" name="biopax_form">
 {{ biopax_form.biopax_input }}
 {{ biopax_form.biopax_process(class_="process_button") }}
-{{ biopax_form.statements_list(class_="statements_list") }}
+{{ biopax_form.biopax_stmts(class_="statements_list") }}
 <button type="button" id="biopax_select">>></button>
 </form>
 </div>
@@ -43,7 +43,7 @@
 <form action="" method="POST" name="bel_form">
 {{ bel_form.bel_input }}
 {{ bel_form.bel_process(class_="process_button") }}
-{{ bel_form.statements_list(class_="statements_list") }}
+{{ bel_form.bel_stmts(class_="statements_list") }}
 <button type="button" id="bel_select">>></button>
 </form>
 </div>
@@ -51,7 +51,7 @@
 
 <div class="panel" id="indra_panel">
 <form action="" method="POST" name="indra_form">
-{{ indra_form.indra_list(class_="statements_list") }}
+{{ indra_form.indra_stmts(class_="statements_list") }}
 {{ indra_form.remove }}
 {{ indra_form.select_all }}
 {{ indra_form.select_none }}
